Include suiting unsplash pictures to all existing posts

--- a/_posts/2016-05-22-planning.md
+++ b/_posts/2016-05-22-planning.md
@@ -2,8 +2,9 @@
 title: "Planning"
 excerpt: "May 22nd - A challenge is born"
 header:
-  teaser: "teaser_sky_fdp-100279908.jpg"
-  caption: "Photo credit: [**Serge Bertasius Photography at FreeDigitalPhotos.net**](FreeDigitalPhotos.net)"
+  teaser: "teaser_unsplash_planning.jpg"
+  image: "header_unsplash_planning.jpg"
+  caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
 categories: 
   - Personal
 tags:
@@ -37,12 +38,3 @@ Therefore I call this my eye challenge. I do not expect it to be easy, but I do 
 
 This sums up to one hour. It is a lot and definitely more than I invested daily so far, but it sounds totally manageable. 
 
-
-{% capture fig_img %}
-![Foo]({{ base_path }}/images/teaser_sky_fdp-100279908.jpg)
-{% endcapture %}
-
-<figure>
-  {{ fig_img | markdownify | remove: "<p>" | remove: "</p>" }}
-  <figcaption>Image courtesy of Serge Bertasius Photography at FreeDigitalPhotos.net</figcaption>
-</figure>
