--- a/_posts/2016-05-23-so-far.md
+++ b/_posts/2016-05-23-so-far.md
@@ -2,8 +2,9 @@
 title: "Status Quo and Past"
 excerpt: "May 23nd - Thinking about my journey so far"
 header:
-  teaser: "teaser_sky_fdp-100279908.jpg"
-  caption: "Photo credit: [**Serge Bertasius Photography at FreeDigitalPhotos.net**](FreeDigitalPhotos.net)"
+  teaser: "teaser_unsplash_blurry.jpg"
+  image: "header_unsplash_blurry.jpg"
+  caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
 categories: 
   - Personal
 tags:
@@ -16,50 +17,56 @@ tags:
 
 
 
-### Where am I standing now?
+## Where am I standing now?
 
 My last eye examination was over a year ago, before I discovered the eye wellness programme. I mostly wear contact lenses, but I will include both glasses and contact lenses values to be able to see a full comparison.
  
 
-#### Last glasses prescription
+### Last prescription January 2015
+
+*Last glasses prescription:*
 
 |         | Sph   | Cyl   | Ach  | Add  | PD    |
-|:--------|:-----:|:-----:|:----:|:----:|------:|
-| Right   | -7,50 | -0.75 |151   | 0,00 | 29,00 |
-| Left    | -7,25 | -0.75 |5     | 0,00 | 29,00 |
+|:--------|:-----:|:-----:|:----:|:----:|:-----:|
+| Right   | -7.50 | -0.75 |151   | 0.00 | 29.00 |
+| Left    | -7.25 | -0.75 |5     | 0.00 | 29.00 |
 |----
 {: rules="groups"}
 
 
-#### Last contact lenses prescription
+*Last contact lenses prescription:*
 
-|         | value |
-|:--------|------:|
-| Right   | -7,00 | 
-| Left    | -7,00 | 
+|         | PWR   |
+|:--------|:-----:|
+| Right   | -7.00 | 
+| Left    | -7.00 | 
 |----
 {: rules="groups"}
 
 
-Starting from this I already swapped to wearing weaker contact lenses. You can get those online without a prescription and even in some drugstores. I bought in one go lenses in 0.75 steps from where I stood down to xx
+Starting from this I already swapped to wearing weaker contact lenses. You can get those online without a prescription and even in some drugstores. I bought in one go lenses in steps from where I stood down to -2.25. I wish I had documented the following stages, so here is a rough outline on my experiences so far. When you start this experiment I realise now, that it is really useful to take notes on observations. 
 
-I wish I had documented these stages, but roughly I first swapped in February 2015 to contact lenses of xx. In the beginning the blurry vision in the distance wasn't easy to deal with, but I think after a week I was fully used to it. Since most days are spend walking the same roads and rooms, it is way more easy to navigate than I first had anticipated.
+I find it easist to check my eyes on a regular schedule by observing signs during your commute. This way you will have them in front of you as a reminder to check what you see. You will notice that even during one day the signs can be more or less blurred or readable. This is totally normal, since our vision is actually not as fixed as glass prescriptions want to make us believe. By using weaker glasses you are not automatically regain your vision without additional time spend on relaxation and training, but you give your eyes tolerance to swing with the mood again between better and worth.
 
-Once I noticed seeing better again, I moved down another step to xx. From there it took me roughly another half a year. Then after quitting my job to fully focus on my eye coaching and my own health I noticed on a couple of days that I could read signs in the underground accross the aisle again. Time to challenge my eyes once more - which is where I am now wearing contact lenses with xx.
 
-When you start this experiment I realise now, that it is really useful to take notes on observations. I find it easist to check my eyes on a regular schedule by observing signs during your commute. This way you will have them in front of you as a reminder to check what you see. You will notice that even during one day the signs can be more or less blurred or readable. This is totally normal, since our vision is actually not as fixed as glass prescriptions want to make us believe. By using weaker glasses you are not automatically regain your vision without additional time spend on relaxation and training, but you give your eyes tolerance to swing with the mood again between better and worth.
+### May 2015
+
+
+I first swapped in May 2015 to weaker contact lenses of **-6.00**. In the beginning the blurry vision in the distance wasn't easy to deal with. It was the highest difference and maybe a bit too much to start with. I think it took me a week or two to get used to not seeing focused in the distance anymore. Those first days I got tired very quickly and felt quickly getting headaches as well. Since most days are spend walking the same roads and rooms, it is way more easy to navigate than I first had anticipated. My computer screen at work was originally also slightly too far away for me to be able to read with these weaker lenses. But with a bit of rearranging my desk I was able to stick with it.
+
+
+### Autumn 2015
+
+Accompanying using the weaker contact lenses I wanted to adopt a daily eye yoga practice. Unfortunately stress at work at various other things kept getting in my way and so I was not noticing much progress for a while.
+
+Once I noticed seeing better again, I moved down another step to *-5.25*. From there it took me roughly another half a year. 
+
+
+### April 2016
+
+After quitting my job to fully focus on my eye coaching and my own health I noticed on a couple of days in April that I could read signs in the underground accross the aisle again. Time to challenge my eyes once more - which is where I am now, wearing contact lenses with *-4.50*. These give me at the moment a similiar vision to where I started with the **-6.00** lenses, so overall I assume I regained one dioptre over this past year. This might not sound much, but to me it really shows that change to the better is possible and gives me motivation to step up the speed now.
 
 
 ### Word of warning
 
-I only allow myself wearing the weaker contact lenses on days when I do not drive a car or bicycle! Fortunately those are most of my days. Participating in road traffic needs your full vision and limiting it would endanger yourself and others!
-
-
-{% capture fig_img %}
-![Foo]({{ base_path }}/images/teaser_sky_fdp-100279908.jpg)
-{% endcapture %}
-
-<figure>
-  {{ fig_img | markdownify | remove: "<p>" | remove: "</p>" }}
-  <figcaption>Image courtesy of Serge Bertasius Photography at FreeDigitalPhotos.net</figcaption>
-</figure>
+I only allow myself wearing the weaker contact lenses on days when I **do not drive a car or bicycle**! Fortunately those are most of my days. Participating in road traffic needs your full vision and limiting it would endanger yourself and others!
