--- a/_posts/2016-05-25-day1.md
+++ b/_posts/2016-05-25-day1.md
@@ -1,6 +1,6 @@
 ---
 title: "Day 1"
-excerpt: "May 25th - The challenge journey begins"
+excerpt: "May 25th - Stepping on the road of my challenge"
 header:
   teaser: "teaser_unsplash_road.jpg"
   image: "header_unsplash_road.jpg"
