Include about information

--- a/_posts/2016-05-23-so-far.md
+++ b/_posts/2016-05-23-so-far.md
@@ -55,7 +55,7 @@ I find it easist to check my eyes on a regular schedule by observing signs durin
 I first swapped in May 2015 to weaker contact lenses of **-6.00**. In the beginning the blurry vision in the distance wasn't easy to deal with. It was the highest difference and maybe a bit too much to start with. I think it took me a week or two to get used to not seeing focused in the distance anymore. Those first days I got tired very quickly and felt quickly getting headaches as well. Since most days are spend walking the same roads and rooms, it is way more easy to navigate than I first had anticipated. My computer screen at work was originally also slightly too far away for me to be able to read with these weaker lenses. But with a bit of rearranging my desk I was able to stick with it.
 
 
-### Autumn 2015
+### August 2015
 
 Accompanying using the weaker contact lenses I wanted to adopt a daily eye yoga practice. Unfortunately stress at work at various other things kept getting in my way and so I was not noticing much progress for a while.
 
